[package]
name = "abc195a"
version = "0.1.0"
authors = ["example <example@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 競技プログラミングの入出力サポートその1
proconio = { version = "=0.3.6", features = ["derive"] }
